<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp" />
    <item
        android:id="@+id/daily_menu"
        android:title="@string/daily"
        android:icon="@drawable/ic_wb_sunny_black_24dp"/>
    <item
        android:id="@+id/gallery_menu"
        android:title="@string/gallery"
        android:icon="@drawable/ic_panorama_black_24dp"/>
    <item
        android:id="@+id/favorite_menu"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite_black_24dp"/>
    <item
        android:id="@+id/profile_menu"
        android:title="@string/account"
        android:icon="@drawable/ic_person_black_24dp"/>

</menu>
